--- a/package.json
+++ b/package.json
@@ -30,7 +30,10 @@
     "webpack-dev-server": "^2.5.1"
   },
   "dependencies": {
+    "font-awesome": "^4.7.0",
+    "normalize": "^0.3.1",
     "react": "^15.6.1",
-    "react-dom": "^15.6.1"
+    "react-dom": "^15.6.1",
+    "simple-line-icons": "^2.4.1"
   }
 }
