--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "file-loader": "^0.11.2",
     "jsx-loader": "^0.13.2",
     "node-sass": "^4.5.3",
+    "prop-types": "^15.5.10",
     "sass-loader": "^6.0.6",
     "style-loader": "^0.18.2",
     "uglifyjs-webpack-plugin": "^0.4.6",
