--- a/package.json
+++ b/package.json
@@ -33,6 +33,7 @@
   "dependencies": {
     "font-awesome": "^4.7.0",
     "normalize": "^0.3.1",
+    "normalize.css": "^7.0.0",
     "react": "^15.6.1",
     "react-dom": "^15.6.1",
     "simple-line-icons": "^2.4.1"
