--- a/package.json
+++ b/package.json
@@ -22,8 +22,10 @@
     "file-loader": "^0.11.2",
     "jsx-loader": "^0.13.2",
     "node-sass": "^4.5.3",
+    "postcss-loader": "^2.0.6",
     "prop-types": "^15.5.10",
     "sass-loader": "^6.0.6",
+    "sass-resources-loader": "^1.2.1",
     "style-loader": "^0.18.2",
     "uglifyjs-webpack-plugin": "^0.4.6",
     "url-loader": "^0.5.9",
