--- a/package.json
+++ b/package.json
@@ -39,6 +39,8 @@
     "normalize.css": "^7.0.0",
     "react": "^15.6.1",
     "react-dom": "^15.6.1",
+    "react-redux": "^5.0.5",
+    "redux": "^3.7.2",
     "simple-line-icons": "^2.4.1"
   }
 }
