--- a/package.json
+++ b/package.json
@@ -39,6 +39,7 @@
     "normalize.css": "^7.0.0",
     "react": "^15.6.1",
     "react-dom": "^15.6.1",
+    "react-router-dom": "^4.1.2",
     "simple-line-icons": "^2.4.1"
   }
 }
