--- a/package.json
+++ b/package.json
@@ -41,6 +41,9 @@
     "react-dom": "^15.6.1",
     "react-redux": "^5.0.5",
     "redux": "^3.7.2",
-    "simple-line-icons": "^2.4.1"
+    "redux-thunk": "^2.2.0",
+    "simple-line-icons": "^2.4.1",
+    "timeout-as-promise": "^1.0.0",
+    "web3": "^1.0.0-beta.3"
   }
 }
