--- a/package.json
+++ b/package.json
@@ -33,18 +33,18 @@
     "webpack-dev-server": "^2.5.1"
   },
   "dependencies": {
-    "ambrosus": "^0.1.0",
+    "ambrosus": "^0.1.4",
     "font-awesome": "^4.7.0",
     "normalize": "^0.3.1",
     "normalize.css": "^7.0.0",
     "react": "^15.6.1",
     "react-dom": "^15.6.1",
     "react-redux": "^5.0.5",
+    "react-router-dom": "^4.1.2",
     "redux": "^3.7.2",
     "redux-thunk": "^2.2.0",
     "simple-line-icons": "^2.4.1",
     "timeout-as-promise": "^1.0.0",
-    "web3": "^1.0.0-beta.3",
-    "react-router-dom": "^4.1.2"
+    "web3": "^1.0.0-beta.3"
   }
 }
