--- a/shrinkwrap.yaml
+++ b/shrinkwrap.yaml
@@ -1,6 +1,7 @@
 dependencies:
   ambrosus: 0.1.0
   babel-core: 6.25.0
+  classnames: 2.2.5
   font-awesome: 4.7.0
   normalize: 0.3.1
   normalize.css: 7.0.0
@@ -1320,6 +1321,9 @@ packages:
     dev: true
     resolution:
       integrity: sha1-WckP4+E3EEdG/xlGmiemNP9oyFc=
+  /classnames/2.2.5:
+    resolution:
+      integrity: sha1-+zgB1FNGdknvNgPH1hoCvRKb3m0=
   /cli-boxes/1.0.0:
     resolution:
       integrity: sha1-T6kXw+WclKAEzWH47lCdplFocUM=
@@ -6903,6 +6907,7 @@ specifiers:
   babel-preset-es2015: ^6.24.1
   babel-preset-react: ^6.24.1
   babel-preset-stage-1: ^6.24.1
+  classnames: ^2.2.5
   css-loader: ^0.28.4
   extract-text-webpack-plugin: ^3.0.0
   file-loader: ^0.11.2
