--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
     "build": "webpack --watch",
-    "dev-server": "webpack-dev-server --content-base dist"
+    "dev-server": "webpack-dev-server -d --content-base dist"
   },
   "author": "",
   "license": "ISC",
