images are loaded

--- a/package.json
+++ b/package.json
@@ -33,20 +33,21 @@
     "webpack-dev-server": "^2.5.1"
   },
   "dependencies": {
-    "ambrosus": "^0.1.6",
+    "ambrosus": "^0.1.8",
     "classnames": "^2.2.5",
     "es6-promisify": "^5.0.0",
     "font-awesome": "^4.7.0",
+    "ipfs": "^0.25.0",
     "ipfs-image-web-upload": "^1.0.3",
     "normalize": "^0.3.1",
     "normalize.css": "^7.0.0",
     "react": "^15.6.1",
     "react-dom": "^15.6.1",
+    "react-file-processor": "0.0.2",
     "react-redux": "^5.0.5",
     "react-router-dom": "^4.1.2",
     "react-select": "^1.0.0-rc.5",
     "redux": "^3.7.2",
-    "redux-file-upload": "0.0.18",
     "redux-thunk": "^2.2.0",
     "simple-line-icons": "^2.4.1",
     "timeout-as-promise": "^1.0.0",
