--- a/package.json
+++ b/package.json
@@ -6,14 +6,16 @@
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
     "build": "webpack --watch",
-    "dev-server": "webpack-dev-server -d --content-base dist"
+    "dev-server": "webpack-dev-server -d --content-base dist --hot --inline"
   },
   "author": "",
   "license": "ISC",
   "devDependencies": {
     "babel-core": "^6.25.0",
     "babel-loader": "^7.1.1",
+    "babel-plugin-transform-decorators-legacy": "^1.3.4",
     "babel-plugin-transform-react-jsx-img-import": "^0.1.4",
+    "babel-polyfill": "^6.23.0",
     "babel-preset-es2015": "^6.24.1",
     "babel-preset-react": "^6.24.1",
     "babel-preset-stage-1": "^6.24.1",
@@ -24,6 +26,8 @@
     "node-sass": "^4.5.3",
     "postcss-loader": "^2.0.6",
     "prop-types": "^15.5.10",
+    "react-css-modules": "^4.5.2",
+    "react-styleable": "^3.1.0",
     "sass-loader": "^6.0.6",
     "sass-resources-loader": "^1.2.1",
     "style-loader": "^0.18.2",
