--- a/shrinkwrap.yaml
+++ b/shrinkwrap.yaml
@@ -20,7 +20,9 @@ dependencies:
   web3: 1.0.0-beta.11
 devDependencies:
   babel-loader: 7.1.1
+  babel-plugin-transform-decorators-legacy: 1.3.4
   babel-plugin-transform-react-jsx-img-import: 0.1.4
+  babel-polyfill: 6.23.0
   babel-preset-react: 6.24.1
   babel-preset-stage-1: 6.24.1
   css-loader: 0.28.4
@@ -29,6 +31,7 @@ devDependencies:
   jsx-loader: 0.13.2
   node-sass: 4.5.3
   postcss-loader: 2.0.6
+  react-css-modules: 4.5.2
   sass-loader: 6.0.6
   sass-resources-loader: 1.2.1
   style-loader: 0.18.2
@@ -574,6 +577,14 @@ packages:
     dev: true
     resolution:
       integrity: sha1-anl2PqYdM9NvN7YRqp3vgagbRqw=
+  /babel-plugin-transform-decorators-legacy/1.3.4:
+    dependencies:
+      babel-plugin-syntax-decorators: 6.13.0
+      babel-runtime: 6.23.0
+      babel-template: 6.25.0
+    dev: true
+    resolution:
+      integrity: sha1-dBtY9sW86eYCfgiC2cmU8E82aSU=
   /babel-plugin-transform-decorators/6.24.1:
     dependencies:
       babel-helper-explode-class: 6.24.1
@@ -805,6 +816,14 @@ packages:
       babel-types: 6.25.0
     resolution:
       integrity: sha1-1fr3qleKZbvlkc9e2uBKDGcCB1g=
+  /babel-polyfill/6.23.0:
+    dependencies:
+      babel-runtime: 6.23.0
+      core-js: 2.4.1
+      regenerator-runtime: 0.10.5
+    dev: true
+    resolution:
+      integrity: sha1-g2TKYt+Or7gwSZ9pkXdGbDsDSZ0=
   /babel-preset-es2015/6.24.1:
     dependencies:
       babel-plugin-check-es2015-constants: 6.22.0
@@ -4851,6 +4870,10 @@ packages:
   /object-keys/1.0.11:
     resolution:
       integrity: sha1-xUYBd4rVYPEULODgG8yotW0TQm0=
+  /object-unfreeze/1.1.0:
+    dev: true
+    resolution:
+      integrity: sha1-aWKL6h88nSn06wumOzgALXDqPOk=
   /object.omit/2.0.1:
     dependencies:
       for-own: 0.1.5
@@ -5734,6 +5757,14 @@ packages:
       strip-json-comments: 2.0.1
     resolution:
       integrity: sha1-LgPo5C7kULjLPc5lvhv4l04d/ZU=
+  /react-css-modules/4.5.2:
+    dependencies:
+      hoist-non-react-statics: 1.2.0
+      lodash: 4.17.4
+      object-unfreeze: 1.1.0
+    dev: true
+    resolution:
+      integrity: sha1-FmulkfO1u9EXRaxPIUOsH8k1cMA=
   /react-dom/15.6.1:
     dependencies:
       fbjs: 0.8.12
@@ -7444,7 +7475,9 @@ specifiers:
   ambrosus: ^0.1.6
   babel-core: ^6.25.0
   babel-loader: ^7.1.1
+  babel-plugin-transform-decorators-legacy: ^1.3.4
   babel-plugin-transform-react-jsx-img-import: ^0.1.4
+  babel-polyfill: ^6.23.0
   babel-preset-es2015: ^6.24.1
   babel-preset-react: ^6.24.1
   babel-preset-stage-1: ^6.24.1
@@ -7461,6 +7494,7 @@ specifiers:
   postcss-loader: ^2.0.6
   prop-types: ^15.5.10
   react: ^15.6.1
+  react-css-modules: ^4.5.2
   react-dom: ^15.6.1
   react-redux: ^5.0.5
   react-router-dom: ^4.1.2
