--- a/package.json
+++ b/package.json
@@ -43,6 +43,7 @@
     "font-awesome": "^4.7.0",
     "ipfs": "^0.25.0",
     "ipfs-image-web-upload": "^1.0.3",
+    "js-cookie": "^2.1.4",
     "normalize": "^0.3.1",
     "normalize.css": "^7.0.0",
     "react": "^15.6.1",
