react-validation-mixin added

--- a/package.json
+++ b/package.json
@@ -43,6 +43,8 @@
     "font-awesome": "^4.7.0",
     "ipfs": "^0.25.0",
     "ipfs-image-web-upload": "^1.0.3",
+    "joi": "^10.6.0",
+    "joi-validation-strategy": "^0.3.3",
     "normalize": "^0.3.1",
     "normalize.css": "^7.0.0",
     "react": "^15.6.1",
@@ -51,6 +53,7 @@
     "react-redux": "^5.0.5",
     "react-router-dom": "^4.1.2",
     "react-select": "^1.0.0-rc.5",
+    "react-validation-mixin": "^5.4.0",
     "redux": "^3.7.2",
     "redux-thunk": "^2.2.0",
     "simple-line-icons": "^2.4.1",
