--- a/package.json
+++ b/package.json
@@ -49,8 +49,11 @@
     "react": "^15.6.1",
     "react-dom": "^15.6.1",
     "react-file-processor": "0.0.2",
+    "react-history": "^0.18.2",
     "react-redux": "^5.0.5",
+    "react-router": "latest",
     "react-router-dom": "^4.1.2",
+    "react-router-redux": "^4.0.8",
     "react-select": "^1.0.0-rc.5",
     "react-validation-mixin": "^5.4.0",
     "react-validatorjs-strategy": "^0.2.1",
