add requirements to offer and filter by qualities works

--- a/package.json
+++ b/package.json
@@ -37,7 +37,7 @@
     "webpack-dev-server": "^2.5.1"
   },
   "dependencies": {
-    "ambrosus": "^0.2.3",
+    "ambrosus": "git://github.com/ambrosus/Ambrosus.git#buying",
     "classnames": "^2.2.5",
     "es6-promisify": "^5.0.0",
     "font-awesome": "^4.7.0",
