--- a/package.json
+++ b/package.json
@@ -54,6 +54,7 @@
     "react-router": "latest",
     "react-router-dom": "^4.1.2",
     "react-router-redux": "^4.0.8",
+    "react-scrollbar": "^0.5.1",
     "react-select": "^1.0.0-rc.5",
     "react-validation-mixin": "^5.4.0",
     "react-validatorjs-strategy": "^0.2.1",
