--- a/package.json
+++ b/package.json
@@ -65,6 +65,7 @@
     "redux-thunk": "^2.2.0",
     "simple-line-icons": "^2.4.1",
     "timeout-as-promise": "^1.0.0",
-    "web3": "^1.0.0-beta.17"
+    "web3": "^1.0.0-beta.17",
+    "webrtcsupport": "^2.2.0"
   }
 }
