--- a/package.json
+++ b/package.json
@@ -62,6 +62,7 @@
     "react-validatorjs-strategy": "^0.2.1",
     "redux": "^3.7.2",
     "redux-devtools-extension": "^2.13.2",
+    "redux-persist": "^4.8.3",
     "redux-thunk": "^2.2.0",
     "simple-line-icons": "^2.4.1",
     "timeout-as-promise": "^1.0.0",
