--- a/package.json
+++ b/package.json
@@ -39,7 +39,7 @@
     "webpack-dev-server": "^2.7.1"
   },
   "dependencies": {
-    "ambrosus": "^0.2.13",
+    "ambrosus": "git://github.com/ambrosus/Ambrosus.git#decimals",
     "classnames": "^2.2.5",
     "es6-promisify": "^5.0.0",
     "font-awesome": "^4.7.0",
