--- a/package.json
+++ b/package.json
@@ -46,6 +46,7 @@
     "ipfs": "^0.25.1",
     "ipfs-image-web-upload": "^1.0.4",
     "js-cookie": "^2.1.4",
+    "lodash": "^4.17.4",
     "normalize": "^0.3.1",
     "normalize.css": "^7.0.0",
     "react": "^15.6.1",
