Upload measurements from csv

--- a/package.json
+++ b/package.json
@@ -49,9 +49,11 @@
     "lodash": "^4.17.4",
     "normalize": "^0.3.1",
     "normalize.css": "^7.0.0",
+    "papaparse": "^4.3.5",
     "react": "^15.6.1",
     "react-dom": "^15.6.1",
     "react-file-processor": "0.0.2",
+    "react-file-reader": "^1.1.1",
     "react-history": "^0.18.2",
     "react-redux": "^5.0.6",
     "react-router": "latest",
