Show time on transactions

--- a/package.json
+++ b/package.json
@@ -47,6 +47,7 @@
     "ipfs-image-web-upload": "^1.0.4",
     "js-cookie": "^2.1.4",
     "lodash": "^4.17.4",
+    "moment": "^2.18.1",
     "normalize": "^0.3.1",
     "normalize.css": "^7.0.0",
     "papaparse": "^4.3.5",
