update package.json - fix building

--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
   "scripts": {
     "fix": "jscs src --fix",
     "test": "echo \"Error: no test specified\" && exit 1",
-    "build": "webpack --watch",
+    "build": "webpack",
     "dev-server": "webpack-dev-server -d --content-base dist --hot --inline"
   },
   "author": "",
