--- a/package.json
+++ b/package.json
@@ -70,7 +70,7 @@
     "redux-thunk": "^2.2.0",
     "simple-line-icons": "^2.4.1",
     "timeout-as-promise": "^1.0.0",
-    "web3": "^1.0.0-beta2",
+    "web3": "^0.18.4",
     "webrtcsupport": "^2.2.0"
   }
 }
