--- a/package.json
+++ b/package.json
@@ -53,6 +53,7 @@
     "normalize": "^0.3.1",
     "normalize.css": "^7.0.0",
     "papaparse": "^4.3.5",
+    "query-string": "^5.0.1",
     "react": "^15.6.1",
     "react-dom": "^15.6.1",
     "react-file-processor": "0.0.2",
