--- a/package.json
+++ b/package.json
@@ -34,7 +34,7 @@
     "sass-loader": "^6.0.6",
     "sass-resources-loader": "^1.3.0",
     "style-loader": "^0.18.2",
-    "uglifyjs-webpack-plugin": "^0.4.6",
+    "uglify-es-webpack-plugin": "^0.10.0",
     "url-loader": "^0.5.9",
     "webpack": "^3.5.5",
     "webpack-dev-server": "^2.7.1"
@@ -55,6 +55,7 @@
     "papaparse": "^4.3.5",
     "query-string": "^5.0.1",
     "react": "^15.6.1",
+    "react-addons-css-transition-group": "^15.6.2",
     "react-dom": "^15.6.1",
     "react-file-processor": "0.0.2",
     "react-file-reader": "^1.1.1",
